# secure-agentic-work-os

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.openclaw.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  crypto.py  database.py  migrations.py  rbac.py  security.py
backend/app/models/: schemas.py
backend/app/services/: agent.py  approval.py  audit.py  background_tasks.py  connector_providers.py  connector_validation.py  connectors.py  embeddings.py  grounded_answers.py  jobs.py  mcp_gateway.py  mcp_protocol.py  model_gateway.py  observability.py  oidc.py  openclaw.py  policies.py  prompt_guard.py  rag.py  rag_evaluation.py  tasks.py  users.py  workflows.py
backend/migrations/: env.py
backend/migrations/versions/: 20260714_0001_initial_schema.py  20260714_0002_security_mcp.py  20260714_0003_workflow_state_machine.py  20260715_0004_runtime_observability.py  20260715_0005_rag_quality_evaluation.py  20260715_0006_organization_identity_tenant_isolation.py  20260715_0007_production_connectors.py  20260716_0008_openclaw_integration.py  20260717_0009_live_provider_validation.py
backend/tests/: conftest.py  test_agentic_flow.py  test_embeddings.py  test_live_provider_validation.py  test_migrations.py  test_model_gateway_and_llm.py  test_observability.py  test_openclaw_integration.py  test_organization_identity.py  test_production_connectors.py  test_rag_evaluation.py  test_security_mcp.py  test_workflow_state_machine.py
frontend/: .dockerignore  (+4 more)
(+21 files in other folders)
