[project]
name = "secure-agentic-work-os-backend"
version = "0.1.0"
description = "FastAPI backend for a secure enterprise agentic AI copilot"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "cryptography>=43.0.0,<50.0.0",
  "httpx>=0.28.0,<1.0.0",
  "openai>=2.0.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "pypdf>=6.1.0,<7.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "python-jose[cryptography]>=3.5.0,<4.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
